# matcha-kol-scorer

./: .env.example  MATCHA_README.md  README.md  pyproject.toml
docs/: 00-mvp-plan.md
matcha/: __init__.py  config.py
matcha/cli/: __init__.py  main.py
matcha/crawlers/: __init__.py  douyin_resolver.py
matcha/keywords/: matcha_dessert.yaml
matcha/pipeline/: __init__.py
matcha/report/: __init__.py
matcha/scoring/: __init__.py  thresholds.yaml
matcha/stores/: __init__.py  db.py  resolution_repo.py  schema.sql
matcha/tests/: __init__.py  test_csv_io.py  test_douyin_resolver.py  test_resolution_repo.py
matcha/utils/: __init__.py  csv_io.py
